# SemanticSfM

./: .gitignore  Downloads.md  README.md  semantic_README.md
REPORT/: DIP-wxp.pptx  DIP-wy.pptx  SfM_README.md  report.md  report.md.html  ~$作业报告.docx  作业报告.docx
SemanticSfM/: CMakeLists.txt  README.md  do.sh
SemanticSfM/backup/: Cascade_Hashing_Matcher_Regions_AllInMemory.cpp
SemanticSfM/i23dSFM/: CMakeLists.txt
SemanticSfM/i23dSFM/cameras/: Camera_Intrinsics.hpp
SemanticSfM/i23dSFM/features/: feature.hpp  image_describer.hpp  regions.hpp
SemanticSfM/i23dSFM/geometry/: rigid_transformation3D_srt.hpp
SemanticSfM/i23dSFM/graph/: CMakeLists.txt  Normalized_Cut.h  Normalized_Cut_test.cpp  connectedComponent.hpp  graph_builder.hpp
SemanticSfM/i23dSFM/matching/: cascade_hasher.hpp  indMatch_utils.hpp
SemanticSfM/i23dSFM/matching_image_collection/: Cascade_Hashing_Matcher_Regions_AllInMemory.cpp
SemanticSfM/i23dSFM/sfm/: sfm.hpp  sfm_data.hpp  sfm_data_BA_ceres.cpp  sfm_data_BA_ceres.hpp  sfm_data_BA_ceres_camera_functor.hpp  sfm_data_io_cereal.hpp  sfm_landmark.hpp  sfm_report.hpp  sfm_utility.cpp  sfm_utility.hpp  sfm_view.hpp
SemanticSfM/i23dSFM/sfm/pipelines/: sfm_engine.hpp
SemanticSfM/i23dSFM/tracks/: tracks.hpp
SemanticSfM/i23dSFM_Samples/: CMakeLists.txt
SemanticSfM/i23dSFM_Samples/enft_matching/: CMakeLists.txt  enft_matching.cpp
SemanticSfM/i23dSFM_Samples/exifParsing/: CMakeLists.txt  exifParsing.cpp
SemanticSfM/i23dSFM_Samples/features_akaze_demo/: CMakeLists.txt  akaze_demo.cpp  main_computeAKAZE.cpp
SemanticSfM/i23dSFM_Samples/features_repeatability/: CMakeLists.txt  main_repeatability_dataset.cpp
SemanticSfM/i23dSFM_Samples/image_describer_matches/: CMakeLists.txt  describe_and_match.cpp
SemanticSfM/i23dSFM_Samples/kvld_filter/: CMakeLists.txt  kvld_filter.cpp
SemanticSfM/i23dSFM_Samples/robust_essential/: CMakeLists.txt  robust_essential.cpp
SemanticSfM/i23dSFM_Samples/robust_essential_ba/: CMakeLists.txt  robust_essential_ba.cpp
SemanticSfM/i23dSFM_Samples/robust_essential_spherical/: CMakeLists.txt  robust_essential_spherical.cpp  spherical_cam.hpp
SemanticSfM/i23dSFM_Samples/robust_fundamental/: CMakeLists.txt  robust_fundamental.cpp
SemanticSfM/i23dSFM_Samples/robust_fundamental_guided/: CMakeLists.txt  robust_fundamental_guided.cpp
SemanticSfM/i23dSFM_Samples/robust_homography/: CMakeLists.txt  robust_homography.cpp
SemanticSfM/i23dSFM_Samples/robust_homography_guided/: CMakeLists.txt  robust_homography_guided.cpp
SemanticSfM/i23dSFM_Samples/sensorWidthDatabase/: CMakeLists.txt  main_ParseDatabase.cpp
SemanticSfM/i23dSFM_Samples/siftPutativeMatches/: CMakeLists.txt  siftmatch.cpp
SemanticSfM/i23dSFM_Samples/undisto_Brown/: CMakeLists.txt  undistoBrown.cpp
SemanticSfM/i23dTools/CudaSift/: CMakeLists.txt  cudaImage.h  cudaSift.h  cudaSiftH.cu  extractSift.cpp  mainSift.cpp  matching.cu  test.feat
SemanticSfM/i23dTools/MeshSimplification/: ._Eigen  BilateralNormalFilter.cpp  BilateralNormalFilter.h  CMakeLists.txt  Feature.cpp  Feature.h  Mesh.cpp  Mesh.h  MxBlock.h  MxDynBlock.h  MxHeap.cxx  MxHeap.h  Simplify.cpp  Simplify.h  main  main.cpp  mixmsg.h  stdmix.h  usage.txt
SemanticSfM/i23dTools/MeshSimplification/Eigen/src/: ._LU
SemanticSfM/i23dTools/MeshSimplification/Eigen/src/Core/products/: ._TriangularMatrixVector.h
SemanticSfM/i23dTools/MeshSimplification/Eigen/src/SVD/: ._CMakeLists.txt
SemanticSfM/i23dTools/MeshSimplification/gfx/: ._mat3.h  arcball.h  array.h  baseball.h  color.h  geom3d.h  geom4d.h  gfx.h  gl.h  glext.h  gltools.h  gui.h  intvec.h  mat2.h  mat3.h  mat4.h  quat.h  raster.h  script.h  symmat2.h  symmat3.h  symmat4.h  trackball.h  vec2.h  vec3.h  vec4.h
SemanticSfM/i23dTools/MeshSimplification/gfx/win/: gui-mfc.h  mfc.h  wintools.h
SemanticSfM/i23dTools/chessboard_undistortion/: CMakeLists.txt  chessboard_undistortion.cpp  gopro_undistortion.sh
SemanticSfM/i23dTools/extract_videoframe/: CMakeLists.txt  extract_videoframe.cpp
SemanticSfM/nonFree/sift/: SIFT_describer.hpp
SemanticSfM/software/: CMakeLists.txt
SemanticSfM/software/SfM/: CMakeLists.txt  SfMPlyHelper.hpp  SfM_SequentialPipeline.py.in  main_ComputeFeatures.cpp  main_ComputeMatches.cpp  main_ComputeSemanticFeatures.cpp  main_ComputeSfM_DataColor.cpp  main_ComputeSfM_SemanticDataColor.cpp  main_ComputeStructureFromKnownPoses.cpp  main_IncrementalSfM.cpp  main_SfMInit_ImageListing.cpp
SemanticSfM/software/SfMViewer/: CMakeLists.txt  document.h  main.cpp
SemanticSfM/software/mpi/: .hosts.swp  CMakeLists.txt  hosts  main_mpiComputeFeatures.cpp  main_mpiComputeFeatures_v2.cpp  main_mpiComputeMatches.cpp  main_mpiIncrementalSfM.cpp  mpi_bundle_adjustment.cpp  mpi_bundle_adjustment.h  my_mpi.h
SemanticSfM/software/opencv/accv12_demo/: CMakeLists.txt  main.cpp
SemanticSfM/software/ui/SfM/control_points_registration/: CMakeLists.txt  ControlPointTableView.cpp  ControlPointTableView.hpp  document.hpp  mainLayout.cpp
dataset/: README.md
dataset/PSSD/: README-cn.md  README.md.html
matlab_test/: CMakeLists.txt
matlab_test/include/: libFmincon.h  mclmcrrt.h
matlab_test/matlab/: angelAxisRotatePoint.m  constrains.m  main.m  sumLeastSquare.m
matlab_test/src/: test_fmincon.cpp~
tensorpack/: README.md  README.md.html  requirements.txt
tensorpack/docs/: requirements.txt
tensorpack/examples/Deeplab/: download_init_model.sh  seg_utils.py
tensorpack/scripts/: plot-point.py
tensorpack/tensorpack/dataflow/: image.py
tensorpack/tensorpack/gist/: ind_rnn_cell.py
tensorpack/tensorpack/models/: batch_norm.py
tensorpack/tensorpack/tfutils/: sessinit.py  symbolic_functions.py
tensorpack/tensorpack/train/: base.py  tower.py
tensorpack/tensorpack/utils/: stats.py
testapp/: README.md  app.js  package.json
testapp/public/stylesheets/: animate.min.css  bootstrap-theme.min.css  bootstrap.min.css  data-show.min.css  hover.min.css  main.min.css  main.min.css.map  swiper.min.css
testapp/routes/: index.js
testapp/views/: index.jade  new_upload.jade  result.jade  upload.jade
(+61 files in other folders)
