ADD_SUBDIRECTORY(SfM)
ADD_SUBDIRECTORY(Localization)
#ADD_SUBDIRECTORY(opencv)

IF (I23dSFM_BUILD_OPENGL_EXAMPLES)
  ADD_SUBDIRECTORY(SfMViewer)
ENDIF (I23dSFM_BUILD_OPENGL_EXAMPLES)

ADD_SUBDIRECTORY(colorHarmonize)
ADD_SUBDIRECTORY(mpi)
find_package(Qt4 QUIET)
if (QT_FOUND)
ADD_SUBDIRECTORY(ui)
endif (QT_FOUND)

